fix content overflowing

--- a/frontend/src/components/Playlists/Playlists.scss
+++ b/frontend/src/components/Playlists/Playlists.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-flow: column nowrap;
   height: 100%;
+  overflow: hidden;
 
   .Header {
     align-items: center;
