--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -83,6 +83,8 @@
     padding: 0 $padding-horizontal;
     z-index: 0;
     scrollbar-width: none;
+    flex-direction: column;
+    display: flex;
   }
 
   @media screen and(max-width: $breakpoint-md) {
